--- a/schedule.html
+++ b/schedule.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Welcome to MT5013</title>
+<title>Schedule VT18</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -202,22 +202,102 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Welcome to MT5013</h1>
+<h1 class="title toc-ignore">Schedule VT18</h1>
 
 </div>
 
 
-<p>This is the course web-site for Statistical Data Processing (<a href="https://sisu.it.su.se/search/archive_info/MT5013">MT5013</a>) at the <a href="http://www.math.su.se/">department of Mathematics</a>, <a href="http://www.su.se/">Stockholm University</a>. The course gives and introduction to obtaining, wrangling, exploring and visualising data using R. Main litterature will be <a href="http://r4ds.had.co.nz/index.html">R for Data Science</a> by Grolemund and Wickham complemented by courses from <a href="https://www.datacamp.com/home">DataCamp</a>.</p>
-<div id="examination" class="section level3">
-<h3>Examination</h3>
-<p>Examination constists of</p>
-<ul>
-<li><p><a href="HW.html">Weekly individual homework assignments with sharp deadlines and peer review.</a></p></li>
-<li><p><a href="exam.html">An electronic exam (date to be announced).</a></p></li>
-<li><p><a href="project.html">An individual project.</a></p></li>
-</ul>
-<p>Note that DataCamp assignments are not part of the examination.</p>
-</div>
+<table>
+<thead>
+<tr class="header">
+<th align="left">Day</th>
+<th align="left">Time</th>
+<th align="left">Topic</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">måndag, 2018-01-15</td>
+<td align="left">09:15-12:00</td>
+<td align="left"><a href="day1.html">Introduction. Software, GitHub and Markdown.</a></td>
+</tr>
+<tr class="even">
+<td align="left">onsdag, 2018-01-17</td>
+<td align="left">09:15-12:00</td>
+<td align="left"><a href="day2.html">Tidyverse: Basic dplyr and ggplot2.</a></td>
+</tr>
+<tr class="odd">
+<td align="left">torsdag, 2018-01-18</td>
+<td align="left">12:45-15:30</td>
+<td align="left">Tidyverse: group_by and summarise, more ggplot2.</td>
+</tr>
+<tr class="even">
+<td align="left">måndag, 2018-01-22</td>
+<td align="left">09:15-12:00</td>
+<td align="left">Exploratory data analysis</td>
+</tr>
+<tr class="odd">
+<td align="left">torsdag, 2018-01-25</td>
+<td align="left">12:45-15:30</td>
+<td align="left">Exploring high-dimensional data: Principal components and clustering</td>
+</tr>
+<tr class="even">
+<td align="left">måndag, 2018-01-29</td>
+<td align="left">09:15-12:00</td>
+<td align="left">Cleaning data: Tidy data. Long to wide and back.</td>
+</tr>
+<tr class="odd">
+<td align="left">onsdag, 2018-01-31</td>
+<td align="left">09:15-12:00</td>
+<td align="left">Relational data: Combining tables with dplyr joins.</td>
+</tr>
+<tr class="even">
+<td align="left">torsdag, 2018-02-01</td>
+<td align="left">12:45-15:30</td>
+<td align="left">Relational data: SQL basics. <strong>Guest lecture: Sebastian Tengborg from <a href="https://king.com/sv">King</a></strong></td>
+</tr>
+<tr class="odd">
+<td align="left">måndag, 2018-02-05</td>
+<td align="left">09:15-12:00</td>
+<td align="left">Text data: Regular expressions.</td>
+</tr>
+<tr class="even">
+<td align="left">torsdag, 2018-02-08</td>
+<td align="left">12:45-15:30</td>
+<td align="left">Using APIs: httr, JSON and XML.</td>
+</tr>
+<tr class="odd">
+<td align="left">måndag, 2018-02-12</td>
+<td align="left">09:15-12:00</td>
+<td align="left">Web-scraping: Basic rvest.</td>
+</tr>
+<tr class="even">
+<td align="left">torsdag, 2018-02-15</td>
+<td align="left">12:45-15:30</td>
+<td align="left">R Programming: Programming with functions.</td>
+</tr>
+<tr class="odd">
+<td align="left">måndag, 2018-02-19</td>
+<td align="left">09:15-12:00</td>
+<td align="left">R Programming: Functional programming with purrr. <strong>Guest lecture: Mehrdad Mamaghani from <a href="https://primegroup.com/article/insight-mapping-usa-on-facebook-the-case-for-macro-targeting/">Prime</a></strong></td>
+</tr>
+<tr class="even">
+<td align="left">torsdag, 2018-02-22</td>
+<td align="left">12:45-15:30</td>
+<td align="left">Presenting: Principles of visualisation.</td>
+</tr>
+<tr class="odd">
+<td align="left">tisdag, 2018-02-27</td>
+<td align="left">13:00-17:00</td>
+<td align="left">Exam.</td>
+</tr>
+<tr class="even">
+<td align="left">måndag, 2018-03-12</td>
+<td align="left">12:45-16:00</td>
+<td align="left">Project presentation.</td>
+</tr>
+</tbody>
+</table>
 
 
 
