--- a/HW.html
+++ b/HW.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Welcome to MT5013</title>
+<title>Homework</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -202,22 +202,46 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Welcome to MT5013</h1>
+<h1 class="title toc-ignore">Homework</h1>
 
 </div>
 
 
-<p>This is the course web-site for Statistical Data Processing (<a href="https://sisu.it.su.se/search/archive_info/MT5013">MT5013</a>) at the <a href="http://www.math.su.se/">department of Mathematics</a>, <a href="http://www.su.se/">Stockholm University</a>. The course gives and introduction to obtaining, wrangling, exploring and visualising data using R. Main litterature will be <a href="http://r4ds.had.co.nz/index.html">R for Data Science</a> by Grolemund and Wickham complemented by courses from <a href="https://www.datacamp.com/home">DataCamp</a>.</p>
-<div id="examination" class="section level3">
-<h3>Examination</h3>
-<p>Examination constists of</p>
-<ul>
-<li><p><a href="HW.html">Weekly individual homework assignments with sharp deadlines and peer review.</a></p></li>
-<li><p><a href="exam.html">An electronic exam (date to be announced).</a></p></li>
-<li><p><a href="project.html">An individual project.</a></p></li>
-</ul>
-<p>Note that DataCamp assignments are not part of the examination.</p>
-</div>
+<p>The homework part of the course (3 hp) consists of six assignments with a final grade of PASS/FAIL.</p>
+<table>
+<thead>
+<tr class="header">
+<th align="left">Homework</th>
+<th align="left">Deadline</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left"><a href="HW1.html">HW1: GitHub test-run</a></td>
+<td align="left">2018-01-21</td>
+</tr>
+<tr class="even">
+<td align="left">HW2</td>
+<td align="left">2018-01-28</td>
+</tr>
+<tr class="odd">
+<td align="left">HW3</td>
+<td align="left">2018-02-04</td>
+</tr>
+<tr class="even">
+<td align="left">HW4</td>
+<td align="left">2018-02-11</td>
+</tr>
+<tr class="odd">
+<td align="left">HW5</td>
+<td align="left">2018-02-18</td>
+</tr>
+<tr class="even">
+<td align="left">HW6</td>
+<td align="left">2018-02-25</td>
+</tr>
+</tbody>
+</table>
 
 
 
