--- a/day2.html
+++ b/day2.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Welcome to MT5013</title>
+<title>Day 2: Tidyverse: Basic dplyr and ggplot2.</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -202,21 +202,20 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Welcome to MT5013</h1>
+<h1 class="title toc-ignore">Day 2: Tidyverse: Basic dplyr and ggplot2.</h1>
 
 </div>
 
-
-<p>This is the course web-site for Statistical Data Processing (<a href="https://sisu.it.su.se/search/archive_info/MT5013">MT5013</a>) at the <a href="http://www.math.su.se/">department of Mathematics</a>, <a href="http://www.su.se/">Stockholm University</a>. The course gives and introduction to obtaining, wrangling, exploring and visualising data using R. Main litterature will be <a href="http://r4ds.had.co.nz/index.html">R for Data Science</a> by Grolemund and Wickham complemented by courses from <a href="https://www.datacamp.com/home">DataCamp</a>.</p>
-<div id="examination" class="section level3">
-<h3>Examination</h3>
-<p>Examination constists of</p>
+<div id="TOC">
 <ul>
-<li><p><a href="HW.html">Weekly individual homework assignments with sharp deadlines and peer review.</a></p></li>
-<li><p><a href="exam.html">An electronic exam (date to be announced).</a></p></li>
-<li><p><a href="project.html">An individual project.</a></p></li>
+<li><a href="#do-this-before-class">Do this before class</a></li>
 </ul>
-<p>Note that DataCamp assignments are not part of the examination.</p>
+</div>
+
+<div id="do-this-before-class" class="section level2">
+<h2>Do this before class</h2>
+<p>Read <a href="http://r4ds.had.co.nz/">R4DS</a> chapters 3.1-3.6, 5.1-5.3</p>
+<p>Complete assignments <em>Data wrangling</em> and <em>Data visualization</em> (first two chapters of Introduction to the Tidyverse) at <a href="https://www.datacamp.com/groups/statistisk-databehandling-vt18/details">DataCamp</a>.</p>
 </div>
 
 
