Added slides day one

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About This Website</title>
+<title>Schedule VT18</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -171,7 +171,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Statistisk databehandling (MT5013)</a>
+      <a class="navbar-brand" href="index.html">Statical Data Processing (MT5013)</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -179,7 +179,16 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="about.html">Schedule</a>
+  <a href="schedule.html">Schedule</a>
+</li>
+<li>
+  <a href="HW.html">Homework</a>
+</li>
+<li>
+  <a href="exam.html">Exam</a>
+</li>
+<li>
+  <a href="project.html">Project</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -193,7 +202,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About This Website</h1>
+<h1 class="title toc-ignore">Schedule VT18</h1>
 
 </div>
 
