--- a/schedule.html
+++ b/schedule.html
@@ -219,7 +219,7 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left">måndag, 2018-01-15</td>
 <td align="left">09:15-12:00</td>
-<td align="left"><a href="day1.html">Introduction. Software, GitHub and Markdown.</a></td>
+<td align="left"><a href="day1.html">Introduction. Software, GitHub and Markdown.</a> <a href="https://rawgit.com/MT5013-VT18/MT5013-VT18.github.io/master/slides/slide1.html#1">[Slides]</a></td>
 </tr>
 <tr class="even">
 <td align="left">onsdag, 2018-01-17</td>
