--- a/day2.html
+++ b/day2.html
@@ -209,6 +209,18 @@ $(document).ready(function () {
 <div id="TOC">
 <ul>
 <li><a href="#do-this-before-class">Do this before class</a></li>
+<li><a href="#att-gora-under-lektionen">Att göra under lektionen</a></li>
+<li><a href="#systembolagets-sortiment">Systembolagets sortiment</a><ul>
+<li><a href="#uppgifter-traning-av-arrange-filter-mutate-select">Uppgifter (träning av <code>arrange</code>, <code>filter</code>, <code>mutate</code>, <code>select</code>, <code>%&gt;%</code>)</a></li>
+<li><a href="#uppgifter-traning-av-ggplot-geom_point-geom_line-facet_wrap">Uppgifter (träning av <code>ggplot</code>, <code>geom_point</code>, <code>geom_line</code>, <code>facet_wrap</code>)</a></li>
+<li><a href="#fler-uppgifter">Fler uppgifter</a></li>
+</ul></li>
+<li><a href="#olympiska-vintermedaljer">Olympiska vintermedaljer</a><ul>
+<li><a href="#uppgifter-traning-av-arrange-filter-mutate-select-1">Uppgifter (träning av <code>arrange</code>, <code>filter</code>, <code>mutate</code>, <code>select</code>, <code>%&gt;%</code>)</a></li>
+<li><a href="#uppgifter-traning-av-ggplot-geom_point-geom_line-facet_wrap-1">Uppgifter (träning av <code>ggplot</code>, <code>geom_point</code>, <code>geom_line</code>, <code>facet_wrap</code>)</a></li>
+<li><a href="#fler-uppgifter-1">Fler uppgifter</a></li>
+</ul></li>
+<li><a href="#gapminder">Gapminder</a></li>
 </ul>
 </div>
 
@@ -216,6 +228,73 @@ $(document).ready(function () {
 <h2>Do this before class</h2>
 <p>Read <a href="http://r4ds.had.co.nz/">R4DS</a> chapters 3.1-3.6, 5.1-5.3</p>
 <p>Complete assignments <em>Data wrangling</em> and <em>Data visualization</em> (first two chapters of Introduction to the Tidyverse) at <a href="https://www.datacamp.com/groups/statistisk-databehandling-vt18/details">DataCamp</a>.</p>
+</div>
+<div id="att-gora-under-lektionen" class="section level2">
+<h2>Att göra under lektionen</h2>
+<p>Börja med att skapa ett R-projekt “Classroom” genom att klona repot <code>https://github.com/MT5013-VT18/Classroom</code>. Därefter skapar du lämpligtvis ett R Mardown dokument <code>Class1.Rmd</code> som du arbetar i. Vi kommer uppdatera repot under kursens gång, för att föra över uppdateringarna till ditt lokala bibliotek gör du en “pull” (Tools &gt; Version control &gt; Pull branches).</p>
+</div>
+<div id="systembolagets-sortiment" class="section level1">
+<h1>Systembolagets sortiment</h1>
+<p>Systembolagets sortiment från 2018-01-12 finns i filen <code>data/Products-2018-jan-12-081155.csv</code>. Den är hämtad från <a href="https://www.systembolaget.se/api/" class="uri">https://www.systembolaget.se/api/</a> och sparad som <code>.csv</code>-fil från Excel (ej helt reproducerbart!). Läs in och undersök innehållet med</p>
+<pre class="r"><code>library(tidyverse)
+Sortiment_hela &lt;- read_delim(&quot;data/Products-2018-jan-12-081155.csv&quot;, 
+                 delim = &quot;;&quot;,
+                 locale = locale(encoding = &quot;latin1&quot;, decimal_mark = &quot;.&quot;))</code></pre>
+<div id="uppgifter-traning-av-arrange-filter-mutate-select" class="section level3">
+<h3>Uppgifter (träning av <code>arrange</code>, <code>filter</code>, <code>mutate</code>, <code>select</code>, <code>%&gt;%</code>)</h3>
+<ul>
+<li><p>Variabeln <code>Alkoholhalt</code> har blivit klassad som <code>character</code> av <code>read_delim</code>, eftersom dess värden innehåller ett procenttecken. Gör om den till numerisk med <code>mutate</code> genom att först ta bort procenttecknet (t.ex. med <code>gsub</code>) och sedan transformera med <code>as.numeric</code>.</p></li>
+<li><p>Ett fåtal produkter har fått varugrupp <code>Röda</code> respektive <code>Vita</code> istället för <code>Rött vin</code> respektive <code>Vitt vin</code>. Korrigera detta, t.ex. genom att använda <code>mutate</code> med ett <code>ifelse</code>-kommando.</p></li>
+<li><p>Vilken dryck har högst <code>PrisPerLiter</code>? Lägg in svaret (d.v.s. dryckens <code>Namn</code> i form av R-kod) i den löpande texten i ditt <code>.Rmd</code>-dokument.</p></li>
+<li><p>Skapa ett nytt datamaterial <code>Sortiment_ord</code> med det ordinarie sortimentet (d.v.s. där variabeln <code>SortimentText</code> antar värdet <code>Ordinarie sortiment</code>). Gör sedan en tabell (t.ex. med <code>kable</code>) över de 10 dyraste (i <code>PrisPerLiter</code>) dryckerna ur detta sortiment. Använd <code>select</code> för att välja ut lämpliga variabler som skall ingå i tabellen.</p></li>
+<li><p>Om du inte redan gjort så, gör föregående uppgift i en sammanhängande sekvens pipes (<code>%&gt;%</code>).</p></li>
+</ul>
+</div>
+<div id="uppgifter-traning-av-ggplot-geom_point-geom_line-facet_wrap" class="section level3">
+<h3>Uppgifter (träning av <code>ggplot</code>, <code>geom_point</code>, <code>geom_line</code>, <code>facet_wrap</code>)</h3>
+<p>För ordinarie sortiment:</p>
+<ul>
+<li>Plotta <code>PrisPerLiter</code> mot <code>Alkoholhalt</code> för ordinarie sortimentet, färglägg punkterna efter varugrupp och överväg log-skala för <code>PrisPerLiter</code>.</li>
+<li>Plotta <code>PrisPerLiter</code> (eventuellt på log-skala) mot <code>Varugrupp</code>. Överväg <code>coord_flip</code> för läsbarhet.</li>
+<li>För varugrupperna i <code>c(&quot;Vitt vin&quot;, &quot;Rött vin&quot;, &quot;Rosévin&quot;, &quot;Mousserande vin&quot;)</code> med årgångar 2010-2017, plotta <code>PrisPerLiter</code> mot <code>Argang</code>. Prova med en <code>facet</code> för varje varugrupp och med färg efter varugrupp i samma <code>facet</code>.</li>
+</ul>
+</div>
+<div id="fler-uppgifter" class="section level3">
+<h3>Fler uppgifter</h3>
+<ul>
+<li>Använd din fantasi.</li>
+</ul>
+</div>
+</div>
+<div id="olympiska-vintermedaljer" class="section level1">
+<h1>Olympiska vintermedaljer</h1>
+<p>Filen <code>data/Winter_medals2018-01-16.csv</code> innehåller antalet medaljer per land och OS-år vid vinter OS sedan 1980 samt landets dåvarande population. Datamaterialet är skapad av <a href="https://github.com/MT5013-VT18/Classroom/blob/master/R/Winter_medals.R"><code>R/Winter_medals.R</code></a> som innehåller mer information, speciellt om hanteringen av länder som delats eller slagits ihop under perioden. Du läser in med</p>
+<pre class="r"><code>winter_medals &lt;- read_csv(&quot;data/Winter_medals2018-01-16.csv&quot;)</code></pre>
+<div id="uppgifter-traning-av-arrange-filter-mutate-select-1" class="section level3">
+<h3>Uppgifter (träning av <code>arrange</code>, <code>filter</code>, <code>mutate</code>, <code>select</code>, <code>%&gt;%</code>)</h3>
+<ul>
+<li>Skapa en variabel <code>medals_per_mill</code>, antal medaljer per miljoner invånare.</li>
+<li>Skapa en tabell med de 10 främsta länderna rankat efter <code>medals_per_mill</code> under vinter OS 2014.</li>
+</ul>
+</div>
+<div id="uppgifter-traning-av-ggplot-geom_point-geom_line-facet_wrap-1" class="section level3">
+<h3>Uppgifter (träning av <code>ggplot</code>, <code>geom_point</code>, <code>geom_line</code>, <code>facet_wrap</code>)</h3>
+<ul>
+<li>Plotta det totala antalet medaljer som funktion av år för Sverige, Norge och Finland i samma figur (använd t.ex. <code>%in%</code> för att filtrera) och skilj på länderna med lämplig “aesthetic” (se <code>?geom_point</code> för en lista på vilka <code>geom_point</code> förstår).</li>
+<li>Plotta antalet svenska guld, silver och brons (bonus: färglägg punkterna i guld/silver/brons-färg) som funktion av år i samma figur.</li>
+<li>Som föregående, fast med en “<code>facet</code>” för var och en av Sverige, Norge och Finland.</li>
+</ul>
+</div>
+<div id="fler-uppgifter-1" class="section level3">
+<h3>Fler uppgifter</h3>
+<ul>
+<li>Använd din fantasi.</li>
+</ul>
+</div>
+</div>
+<div id="gapminder" class="section level1">
+<h1>Gapminder</h1>
+<p>Använd <code>ggplot</code> för att återskapa (statiska versioner) av några figurer från <a href="https://www.ted.com/speakers/hans_rosling">Hans Roslings föredrag</a>. Data finns i <code>library(gapminder)</code>.</p>
 </div>
 
 
