--- a/schedule.html
+++ b/schedule.html
@@ -20,8 +20,8 @@
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
-<script src="site_libs/highlightjs-1.1/highlight.js"></script>
+<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -30,10 +30,12 @@
   }
 </style>
 <script type="text/javascript">
-if (window.hljs && document.readyState && document.readyState === "complete") {
-   window.setTimeout(function() {
-      hljs.initHighlighting();
-   }, 0);
+if (window.hljs) {
+  hljs.configure({languages: []});
+  hljs.initHighlightingOnLoad();
+  if (document.readyState && document.readyState === "complete") {
+    window.setTimeout(function() { hljs.initHighlighting(); }, 0);
+  }
 }
 </script>
 
@@ -207,6 +209,18 @@ $(document).ready(function () {
 </div>
 
 
+<pre><code>## Warning: package &#39;jsonlite&#39; was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package &#39;tidyverse&#39; was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package &#39;ggplot2&#39; was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package &#39;tibble&#39; was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package &#39;tidyr&#39; was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package &#39;readr&#39; was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package &#39;purrr&#39; was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package &#39;dplyr&#39; was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package &#39;stringr&#39; was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package &#39;forcats&#39; was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package &#39;knitr&#39; was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package &#39;bindrcpp&#39; was built under R version 3.4.3</code></pre>
 <table>
 <thead>
 <tr class="header">
@@ -224,7 +238,7 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left">onsdag, 2018-01-17</td>
 <td align="left">09:15-12:00</td>
-<td align="left"><a href="day2.html">Tidyverse: Basic dplyr and ggplot2.</a></td>
+<td align="left"><a href="day2.html">Tidyverse: Basic dplyr and ggplot2.</a> <a href="https://rawgit.com/MT5013-VT18/MT5013-VT18.github.io/master/slides/slide2.html#1">[Slides]</a></td>
 </tr>
 <tr class="odd">
 <td align="left">torsdag, 2018-01-18</td>
