--- a/exam.html
+++ b/exam.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Exam</title>
+<title>Digital tentamen (1.5 hp, betyg A-F)</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -202,12 +202,18 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Exam</h1>
+<h1 class="title toc-ignore">Digital tentamen (1.5 hp, betyg A-F)</h1>
 
 </div>
 
 
-<p>An electronic exam involving live coding in an RStudio environment will test skills in wrangling, tidying and visualisation of data. The exam (1.5 hp) is graded on a scale A-F.</p>
+<p>En digital tentamen, motsvarande 1.5 hp, är schemalagd eftermiddagen <strong>2018-02-27</strong>. Denna examinerar grundläggande färdighet i att använda kursens verktyg med flervalsfrågor samt problemlösning i RStudio-miljö. Tillåtna hjälpmedel kommer inkludera</p>
+<ul>
+<li><a href="https://github.com/rstudio/cheatsheets/raw/master/rmarkdown-2.0.pdf">R Markdown Cheat Sheet</a></li>
+<li><a href="https://github.com/rstudio/cheatsheets/raw/master/data-visualization-2.1.pdf">Data Visualization Cheat Sheet</a></li>
+<li><a href="https://github.com/rstudio/cheatsheets/raw/master/data-transformation.pdf">Data Transformation Cheat Sheet</a></li>
+</ul>
+<p>som delas ut i samband med tentamen.</p>
 
 
 
