--- a/HW.html
+++ b/HW.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Homework</title>
+<title>Individuella hemuppgifter (3 hp, betyg G/U.)</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -202,12 +202,13 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Homework</h1>
+<h1 class="title toc-ignore">Individuella hemuppgifter (3 hp, betyg G/U.)</h1>
 
 </div>
 
 
-<p>The homework part of the course (3 hp) consists of six assignments with a final grade of PASS/FAIL.</p>
+<p>Kursen innehåller sex hemupgifter vars lösningar skall laddas upp på GitHub innan 24:00 vid angiven deadline. Hemuppgifterna skall lösas självständigt.</p>
+<p>Det ingår även att göra en kamratgranskning av en annan students lösning, betygssättning utförs dock av läraren.</p>
 <table>
 <thead>
 <tr class="header">
@@ -221,7 +222,7 @@ $(document).ready(function () {
 <td align="left">2018-01-21</td>
 </tr>
 <tr class="even">
-<td align="left">HW2</td>
+<td align="left"><a href="HW2.html">HW2: Grundläggande tidyverse</a></td>
 <td align="left">2018-01-28</td>
 </tr>
 <tr class="odd">
