--- a/HW.html
+++ b/HW.html
@@ -226,7 +226,7 @@ $(document).ready(function () {
 <td align="left">2018-01-28</td>
 </tr>
 <tr class="odd">
-<td align="left">HW3</td>
+<td align="left"><a href="HW3.html">HW3: Tabellhantering</a></td>
 <td align="left">2018-02-04</td>
 </tr>
 <tr class="even">
